base/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  type: NodePort
  ports:
    - port: 8123
      targetPort: http
      nodePort: 30087
      name: http
  selector:
    app: home-assistant
